<resources>
    <string name="app_name">Risk Analizi</string>
    <string name="radsan_logo_desc">Radsan Logo</string>
    <string name="yapi_alert_yes">Evet</string>
    <string name="yapi_alert_no">İptal</string>
    <string name="yapi_alert_title">Yaptığınız Değişiklikler Kaybolabilir!</string>
    <string name="yapi_alert_message">Çıkmak istediğinize emin misiniz?</string>
    <string name="toast_uyari">Devam Etmeden Önce Lütfen Bu Sayfadaki Bilgileri Doldurunuz.</string>
    <string name="main_section1">Yapı</string>
    <string name="child_section1_1">Yapı Boyutları:</string>
    <string name="hint_uzunluk">Uzunluk (m)</string>
    <string name="hint_genislik">Genişlik (m)</string>
    <string name="hint_cati_duzlemi_yerden_yukseklik">Çatı Düzleminin Yerden Yüksekliği (m)</string>
    <string name="hint_cati_en_yuksek_nokta_yerden_yuksekligi">Çatıdaki En Yüksek Noktanın Yerden Yüksekliği* (m)</string>
    <string name="hint_toplama_alani">Toplama Alanı</string>
    <string name="child_section1_2">Yapı/Çatı Malzemeleri:</string>
    <string-array name="yapi_malzemesi">
        <item>Metal</item>
        <item>Tuğla Beton</item>
        <item>Tutuşabilir</item>
    </string-array>
    <string-array name="cati_malzemesi">
        <item>Metal</item>
        <item>Kiremit</item>
        <item>Yanıcı</item>
    </string-array>
    <string name="child_section1_3">Yapı Özellikleri:</string>
    <string-array name="fiziksel_hasar_yangin_riski">
        <item>Değersiz, Yanıcı Olmayan</item>
        <item>Normal Değerli, Yanıcı</item>
        <item>Değerli, Yanıcı</item>
        <item>Çok Değerli, Yeri Doldurulamaz, Patlayıcı ve Yanıcı</item>
    </string-array>
    <string-array name="yapinin_ekranlanmasi">
        <item>Ekransız</item>
        <item>Ekranlı</item>
    </string-array>
    <string-array name="kablolarin_ekranlanmasi">
        <item>Ekransız</item>
        <item>Ekranlı</item>
    </string-array>
    <string name="button_devam">Devam</string>
    <string name="button_geri">Geri</string>
    <string name="main_section2">Çevre Koşulları</string>
    <string-array name="konum_faktoru">
        <item>Yapı aynı yükseklikte veya daha yüksek yapılar arasında</item>
        <item>Yüksekliği az yapılar arasında</item>
        <item>Etrafında yapı yok ise</item>
        <item>Bölgedeki en yüksek bina ise</item>
    </string-array>
    <string-array name="cevre_faktoru">
        <item>Sürekli kullanımı yok, çevrede değersiz</item>
        <item>Sürekli kullanımda, çevrede değersiz</item>
        <item>Çevrede değerli</item>
    </string-array>
    <string name="yillik_gok_gurultulu_gun_sayisi">Yıllık Gök Gürültülü Gün Sayısı:</string>
    <string name="izokronik_harita">İzokronik Harita:</string>
    <string name="main_section3">Servis Hatları</string>
    <string name="enerji_hatti">Enerji Hattı:</string>
    <string-array name="yapiya_gelen_hattin_turu">
        <item>Option1</item>
        <item>Option2</item>
    </string-array>
    <string-array name="kablolarin_ekranlanmasi_servis">
        <item>Option1</item>
        <item>Option2</item>
    </string-array>
    <string name="ogag_trafo_varligi">OG/AG Trafosunun Varlığı:</string>
    <string name="diger_yerustu_servisler">Diğer Yerüstü Servisler:</string>
    <string name="hint_iletken_servis_sayisi">İletken Servislerin Sayısı</string>
    <string-array name="yapiya_gelen_hattin_turu_servis_yerustu">
        <item>Option1</item>
        <item>Option2</item>
    </string-array>
    <string name="diger_yerati_servisler">Diğer Yeraltı Servisler:</string>
    <string name="hint_iletken_servis_sayisi_yeralti">İletken Servislerin Sayısı</string>
    <string-array name="yapiya_gelen_hattin_turu_servis_yeralti">
        <item>Option1</item>
        <item>Option2</item>
    </string-array>
    <string name="yer_alti_servis">Yeraltı Servis Sağlayıcı</string>
    <string name="main_section4">Korunma Önlemleri</string>
    <string name="korunma_onlemleri">Korunma Önlemleri</string>
    <string-array name="yildirimdan_korunma_duzeyi">
        <item>Koruma Yok</item>
        <item>Koruma Var</item>
    </string-array>
    <string-array name="yangindan_korunma_turu">
        <item>Koruma Yok</item>
        <item>Koruma Var</item>
    </string-array>
    <string-array name="asiri_gerilimden_korunma_turu">
        <item>Koruma Yok</item>
        <item>Koruma Var</item>
    </string-array>
    <string name="main_section5">Kayıp Türü I-II</string>
    <string name="can_kaybi">Can Kaybı:</string>
    <string-array name="yasamsal_tehlikeler">
        <item>İnsansız Bina</item>
        <item>Normal Kalabalık</item>
        <item>Panik Riski Taşıyan, Tahliye Zorluğu Bulunan Bina</item>
    </string-array>
    <string-array name="yangindan_can_kaybi">
        <item>İnsansız Bina</item>
        <item>Normal Kalabalığın Olduğu Bina</item>
        <item>Yoğun Kalabalığın Olduğu Bina</item>
    </string-array>
    <string-array name="asiri_gerilimden_can_kaybi">
        <item>Güvenlik Sistemi Yok</item>
        <item>Güvenlik Sistemi Var</item>
    </string-array>
    <string name="genel_servis_kaybi">Genel Servis Kaybı:</string>
    <string-array name="yangindan_zarar_gorecek_servis">
        <item>Servis Yok</item>
        <item>Servis Var</item>
    </string-array>
    <string-array name="asiri_gerilimden_zarar_gorecek_servis">
        <item>Servis Yok</item>
        <item>Servis Var</item>
    </string-array>
    <string name="main_section6">Kayıp Türü III-IV</string>
    <string name="kulturel_miras_kaybi">Kültürel Miras Kaybı:</string>
    <string-array name="yangin_nedeniyle_kulturel_miras_kaybi">
        <item>Kültürel Miras Değeri Yok</item>
        <item>Kültürel Miras Değeri Var</item>
    </string-array>
    <string name="ekonomik_kayip">Ekonomik Kayıp:</string>
    <string-array name="ekonomik_zarar">
        <item>Ekonomik Zarar Tehlikesi Yok</item>
        <item>Ekonomik Zarar Tehlikesi Var</item>
    </string-array>
    <string-array name="yangin_nedeniyle_ekonomik_kayip">
        <item>Kayıp Riski Yok</item>
        <item>Ticari Kayıp Riski Var</item>
        <item>Demirbaş Kayıp Riski Var</item>
    </string-array>
    <string-array name="asiri_gerilim_nedeniyle_ekonomik_kayip">
        <item>Ev</item>
        <item>İş Yeri</item>
        <item>Kamu Binası</item>
    </string-array>
    <string-array name="adim_gerilim_etkisi">
        <item>Çiftlik Hayvanı Yok</item>
        <item>Çiftlik Hayvanı Var</item>
    </string-array>
    <string-array name="kabul_edilir_ekonomik_risk">
        <item>Option 1</item>
        <item>Option 2</item>
    </string-array>
    <string name="button_gonder">Gönder</string>
    <string name="signout">Hesaptan Çıkış Yap</string>
    <string name="hakkinda_yasal_uyari_baslik">Yasal Uyarılar</string>
    <string name="hakkinda_yasal_uyari_icerik">
Bu mobil uygulama size Radsan A.Ş., İVOGSAN Ağaç Metal İşleri Sitesi 1122 Cd. 1434. Sk. No:1 Ostim / Ankara – Türkiye, tarafından sunulmaktadır. Bu uygulamada sağlanan hizmetler RADSAN A.Ş. (bundan böyle Radsan veya uygulama sahibi olarak anılacaktır), uygulamayı geliştiren ve üçüncü parti uygulamalar kullanılarak özenle bir araya getirilmiştir.
Bu uygulamanın kullanımından doğan herhangi bir zarar – haksız fiil dahil olmak üzere kanuni bir sebebe dayalı olması dışında - ile ilgili uygulama sahibi sorumlulukları amacı veya ağır ihmalinin sebep olabileceği zararlar ile sınırlıdır. Sözleşme ile belirli esaslı görevlerin ihmalinden kaynaklanacak hasarlarda web sitesi sahibinin zorunlu yükümlülükleri ile sınırlı olmak kaydı ile talep edilebilecek toplam tazminat öngörülebilir hasarlar ile sınırlıdır. Bu uygulama sahibinin uygulanabilir Ürün Sorumluluğu kanunu veya verilen garantiler tahtındaki yükümlülüğünü etkilemez. Yukarıda bahsedilen sorumluluk sınırlamaları aynı zamanda insan hayatına, bedeni yaralanmaya veya bir kişinin sağlığına gelebilecek zararlar durumunda geçerli değildir.
Web sitesi sahibi web sitesinde sunulan hizmetlerde kusur veya hata olmayacağına dair veya kesintisiz hizmet verebileceği garantisini verememektedir.
</string>
    <string name="hakkinda_gizlilik_baslik">Gizlilik Politikası</string>
    <string name="hakkinda_gizlilik_icerik">Bu uygulama size Radsan A.Ş., İVOGSAN Ağaç Metal İşleri Sitesi 1122 Cd. 1434. Sk. No:1 Ostim / Ankara - Türkiye, tarafından sunulmaktadır.
Bu uygulamanın hizmetlerinden yararlanırken vereceğiniz kişisel bilgiler, uygulama sahibi tarafından kontrol altında tutulacaktır.
</string>
    <string name="hakkinda_kalite_baslik">Kalite Politikamız</string>
    <string name="hakkinda_kalite_icerik1">RADSAN A.Ş OLARAK: ŞİRKET KURUCUMUZUN 24.05.1945 TARİHİNDE ÖZEL NOT DEFTERİNE ALMIŞ OLDUĞU</string>
    <string name="hakkinda_kalite_icerik2"> “... demek ki her ne olursa olsun yaptığın bütün işlerde ve çalışmalarda bir güzellik, bir hoşa gider gönül okşayıcı şekil ve intizamlı yaparsan; muhakkak suretle mükafatını görürsün.“</string>
    <string name="hakkinda_kalite_icerik3">NOTUNDAN YOLA ÇIKARAK;  İLKE VE DEĞERLERİMİZE UYGUN OLARAK OLUŞTURDUĞUMUZ ENTEGRE YÖNETİM SİSTEMİ İLE YASAL GEREKLİLİKLER DOĞRULTUSUNDA HAREKET ETMEYİ, PAYDAŞLARIMIZIN GÜVENİNİ KAZANMAYI, SÜREKLİ İYİLEŞTİRMELER İLE SİSTEMİNİ GELİŞTİREN, MÜŞTERİ MEMNUNİYETİNİ EN ÜST DÜZEYDE KARŞILAYARAK, KALİTELİ, EKONOMİK ÜRÜN VE HİZMETİ ZAMANINDA SUNAN ULUSAL VE ULUSLARARASI PAZARDA LİDER BİR FİRMA OLMAYI AMAÇLIYORUZ</string>
    <string name="hakkinda_kalite_icerik4">BU AMAÇ DOĞRULTUSUNDA;
 MÜŞTERİ ODAKLI OLUP BEKLENTİLERİNİ KARŞILAMADA SÜREKLİLİĞİ SAĞLAMAYI VE MÜŞTERİ ŞİKÂYETLERİNİ ETKİN OLARAK ELE ALMAYI,
FAALİYETLERİMİZDE İŞ SAĞLIĞI VE GÜVENLİĞİNİ SAĞLAMAYA VE İŞ KAZALARINI ÖNLEMEYE YÖNELİK SİSTEMLER GELİŞTİRMEYİ, ACİL DURUMLARA MÜDAHALE EDEBİLECEK ŞEKİLDE ORGANİZE OLMAYI,
DOĞAL ÇEVREMİZİ KORUMAYA ODAKLANARAK İNSANA VE ÇEVREYE SAYGILI OLMAYI, ATIKLARI AZALTMAYI, GERİ DÖNÜŞÜM ORANINI ARTIRMAYI, DOĞAL KAYNAKLARI VERİMLİ KULLANMAYI,
ŞİRKET HEDEFLERİNE ULAŞMAYI ETKİLEYEBİLECEK RİSK UNSURLARINI VE FIRSATLARI RİSK YÖNETİMİ KAPSAMINDA ETKİ VE OLASILIĞA GÖRE TANIMLAMAYI, DEĞERLENDİRMEYİ, İZLEMEYİ VE GEREKTİĞİNDE AKSİYONLAR ALMAYI
Ulusal ve uluslararası Standartlara, Yasal Mevzuatlara,  Müşteri VE İŞLETME ŞARTNAMELERİNE UYARAK FAALİYETLERİMİZİ GERÇEKLEŞTİRMEYİ
UYGULAMALARIMIZDA PAYDAŞLARIMIZA KARŞI ŞEFFAF OLMAYI VE ÇALIŞANLARIMIZDAKİ FARKINDALIĞI ARTIRARAK, KURMUŞ OLDUĞUMUZ ENTEGRE YÖNETİM SİSTEMİ STANDARTLARI GEREKLERİNİ TÜM ÇALIŞANLARIMIZIN KATILIMI İLE UYGULAMAYI VE SÜREKLİ GELİŞMEYİ TAAHHÜT EDİYORUZ.
</string>
    <string name="hakkinda_kalite_icerik5">GENEL MÜDÜR</string>
    <string name="hakkinda_kalite_icerik6">Turgut Tekin</string>
</resources>