<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.radsan.yldrmdankorunma_riskanalizi.HakkindaActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:alpha="0.5"
        android:background="#33cccc"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="78dp"
            android:layout_weight="0"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="75dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="0"
            app:srcCompat="@drawable/radsanjustlogo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="6dp"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewYasalUyariBaslik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hakkinda_yasal_uyari_baslik"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewYasalUyariİcerik"
                style="@style/Widget.AppCompat.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:autoText="false"
                android:elegantTextHeight="false"
                android:justificationMode="none"
                android:text="@string/hakkinda_yasal_uyari_icerik" />

            <TextView
                android:id="@+id/textViewGizlilikBaslik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hakkinda_gizlilik_baslik"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewGizlilikIcerik"
                style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hakkinda_gizlilik_icerik" />

            <TextView
                android:id="@+id/textViewKaliteBaslik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hakkinda_kalite_baslik"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewKaliteIcerik1"
                style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/hakkinda_kalite_icerik1" />

            <TextView
                android:id="@+id/textViewKaliteIcerik2"
                style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkinda_kalite_icerik2" />

            <TextView
                android:id="@+id/textViewKaliteIcerik3"
                style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkinda_kalite_icerik3" />

            <TextView
                android:id="@+id/textViewKaliteIcerik4"
                style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkinda_kalite_icerik4" />

            <TextView
                android:id="@+id/textViewKaliteIcerik5"
                style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkinda_kalite_icerik5" />

            <TextView
                android:id="@+id/textViewKaliteIcerik6"
                style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hakkinda_kalite_icerik6" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>