<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.radsan.yldrmdankorunma_riskanalizi.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:alpha="0.5"
        android:background="#33cccc"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginStart="78dp"
            android:layout_weight="0"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="75dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="0"
            app:srcCompat="@drawable/radsanjustlogo" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="55dp"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewYapi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_section1"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="24sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewYapiBoyutlari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/child_section1_1"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:layout_editor_absoluteY="32dp" />

            <EditText
                android:id="@+id/editTextUzunluk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_uzunluk"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editTextGenislik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_genislik"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editTextCatiDuzlemininYerdenYuksekligi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_cati_duzlemi_yerden_yukseklik"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editTextCatidakiNoktanınYerdenYuksekligi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_cati_en_yuksek_nokta_yerden_yuksekligi"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/editTextToplamaAlani"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_toplama_alani"
                android:inputType="numberDecimal"
                android:textColorHint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/textViewYapiCatiMalzemeleri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/child_section1_2"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:clipToPadding="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewYapiMalzemesi"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:text="@string/yapi_malzemesi"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerYapiMalzemesi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/yapi_malzemesi"
                    android:gravity="center"
                    android:textAlignment="center" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.3"
                android:background="@android:color/background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewCatiMalzemeleri"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:text="@string/cati_malzemesi"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerCatiMalzemesi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/cati_malzemesi"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewYapiOzellikleri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/child_section1_3"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewFizikselveYanginRiski"
                    android:layout_width="120dp"
                    android:layout_height="65dp"
                    android:layout_weight="0"
                    android:text="@string/fiziksel_hasar_yangin_riski"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerFizikselveYanginRiski"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:entries="@array/fiziksel_hasar_yangin_riski"
                    android:textAlignment="center" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.3"
                android:background="@android:color/background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewYapininEkranlanmasi"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:text="@string/yapinin_ekranlanmasi"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerYapininEkranlanmasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/yapinin_ekranlanmasi"
                    android:textAlignment="center" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:alpha="0.3"
                android:background="@android:color/background_dark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewKablolarinEkranlanmasi"
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:layout_weight="0"
                    android:text="@string/kablolarin_ekranlanmasi"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerKablolarinEkranlanmasi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/kablolarin_ekranlanmasi"
                    android:textAlignment="center" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonDevam1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#33cccc"
                android:text="@string/button_devam" />


            <Button
                android:id="@+id/cikisMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/signout" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
